--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -899,7 +899,7 @@
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
-        "location": "location",
+        "location": "Ayas - Valle d’Aosta",
         "link": "/works/becquet",
         "button": ["Branding", "Label Design"]
       },
@@ -991,7 +991,7 @@
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
-        "location": "location",
+        "location": "Ayas - Valle d’Aosta",
         "link": "/works/bequet",
         "button": ["Branding", "Label Design"]
       },
