--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -969,7 +969,7 @@
         "button": ["Branding", "Allestimenti"]
       },
       {
-        "img": "/portfolioImg/saint/cover.jpg",
+        "img": "/portfolioImg/saint/illustrazioni_linea_classica.png",
         "name": "Saint Grat",
         "title": "saintgrat",
         "descrizione": "Azienda Agricola",
