--- a/public/locales/fr/fr.json
+++ b/public/locales/fr/fr.json
@@ -383,7 +383,7 @@
         "introTitolo": "Progetto",
         "cliente": {
           "titolo": "cliente",
-          "nome": "Ansermè"
+          "nome": "Ansermé Bio Bontà"
         },
         "anno": {
           "titolo": "anno",
