--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -988,7 +988,7 @@
         "introTitolo": "Progetto",
         "cliente": {
           "titolo": "cliente",
-          "nome": "Ansermè"
+          "nome": "Ansermé Bio Bontà"
         },
         "anno": {
           "titolo": "anno",
