--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -432,8 +432,10 @@
         },
         "social": {
           "titolo": "Social",
-          "descrizione": "Immagini e contenuti realizzati ad hoc per la promozione dei prodotti e delle iniziative promosse dall’azienda.",
-          "socialImg": "/portfolioImg/anserme/social.png"
+          "descrizione": [
+            "Immagini e contenuti realizzati ad hoc per la promozione dei prodotti e delle iniziative promosse dall’azienda."
+          ],
+          "socialImg": ["/portfolioImg/anserme/social.png"]
         }
       },
       "becquet": {
@@ -647,8 +649,10 @@
         },
         "social": {
           "titolo": "Social",
-          "descrizione": "Creazione di contenuti fotografici e testuali ad hoc per la promozione dell’azienda sui canali social di Meta.",
-          "socialImg": "/portfolioImg/chappoz/social_chappoz.png"
+          "descrizione": [
+            "Creazione di contenuti fotografici e testuali ad hoc per la promozione dell’azienda sui canali social di Meta."
+          ],
+          "socialImg": ["/portfolioImg/chappoz/social_chappoz.png"]
         }
       },
       "daemy": {
