--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -1027,7 +1027,7 @@
           "descrizione2": "Per promuovere l’iniziativa adotta un alveare ho stilizzato anche un’arnia e i fiori di alta montagna."
         },
         "label": {
-          "titolo": "Label & Pack Design: ",
+          "titolo": "Label & Pack Design",
           "descrizione": "Etichette fustellate per la linea dei mieli biologici stampate su carta betulla vergata.",
           "labelImg": "/portfolioImg/anserme/etichetta_miele.png",
           "cartellinoImg": "/portfolioImg/anserme/latta_caramelle.png",
@@ -1096,7 +1096,7 @@
           "descrizione2": ""
         },
         "label": {
-          "titolo": "Label Design ",
+          "titolo": "Label Design",
           "labelImg": "/portfolioImg/bequet/label1_sam.png",
           "cartellinoImg": "/portfolioImg/bequet/label4_sam.png",
           "caramelleImg": "/portfolioImg/bequet/label2_sam.png",
@@ -1154,7 +1154,7 @@
           "illImg": "/portfolioImg/casadei/pattern_casadei.png"
         },
         "label": {
-          "titolo": "Label Design: ",
+          "titolo": "Label Design",
           "labelImg": "/portfolioImg/casadei/label1.png",
           "cartellinoImg": "/portfolioImg/casadei/label2.png",
           "caramelleImg": "/portfolioImg/casadei/label3.png",
@@ -1206,7 +1206,7 @@
         },
 
         "label": {
-          "titolo": "Label Design: ",
+          "titolo": "Label Design",
           "labelImg": "/portfolioImg/phillacolor/label_philla1.png",
           "biscottiImg": "/portfolioImg/phillacolor/label_philla2.png"
         }
@@ -1259,7 +1259,7 @@
           "illImg": "/portfolioImg/chappoz/illustrazioni.png"
         },
         "label": {
-          "titolo": "Label & Pack Design: ",
+          "titolo": "Label & Pack Design",
           "labelImg": "/portfolioImg/chappoz/label1.png",
           "biscottiImg": "/portfolioImg/chappoz/label_polenta.png"
         },
@@ -1321,7 +1321,7 @@
           "illImg": "/portfolioImg/daemy/illustrazioni.png"
         },
         "label": {
-          "titolo": "Label & Pack Design: ",
+          "titolo": "Label & Pack Design",
           "labelImg": "/portfolioImg/daemy/label1.png",
           "cartellinoImg": "/portfolioImg/daemy/label2.png",
           "caramelleImg": "/portfolioImg/daemy/label3.png",
@@ -1378,7 +1378,7 @@
           "illImg": "/portfolioImg/horto/illustrazioni.png"
         },
         "label": {
-          "titolo": "Label Design: ",
+          "titolo": "Label Design",
           "labelImg": "/portfolioImg/horto/label1.png",
           "biscottiImg": "/portfolioImg/horto/label2.png"
         }
@@ -1486,7 +1486,7 @@
           "illImg2": "/portfolioImg/saint/illustrazioni_green.png"
         },
         "label": {
-          "titolo": "Label & Pack Design: ",
+          "titolo": "Label & Pack Design",
           "labelImg": "/portfolioImg/saint/jus_dor.png",
           "cartellinoImg": "/portfolioImg/saint/scarti.png",
           "caramelleImg": "/portfolioImg/saint/baginbox.png",
